--- a/blog_site_Write/write.html
+++ b/blog_site_Write/write.html
@@ -12,11 +12,12 @@
         <div class="title">
             <h3>書くためのテーマ</h3>
             <div class="sub-title">
-                <p>ホーム</p>
-                <p>ページ</p>
-                <p>タイポグラフィー</p>
-                <p>お問合せ</p>
+                <p><a href="">ホーム</a></p>
+                <p><a href="">ページ</a></p>
+                <p><a href="">タイポグラフィー</a></p>
+                <p><a href="">お問合せ</a></p>
             </div>
+            <p><i class="fas fa-search"></i></p>
         </div>
     </header>
     <main>
@@ -98,7 +99,7 @@
             <div class="foot_container_sub">
                 <div class="foot_main">
                     <img src="img/profile-m.png" class="foot_img">
-                    <p>John Doe</p>  
+                    <p>John_Doe</p>  
                     <div class="foot_mark">
                         <span><i class="fab fa-twitter"></i></span>
                         <span><i class="fab fa-facebook-f"></i></span>
@@ -112,7 +113,7 @@
                     <h3>フッター右</h3>
                     <p>3つのフッター右ウィジェットエリアはフッターの右側に表示され、使用する数によって幅は自動的に調整されます。1つも使用しない場合は表示されません。</p>
                 </div>
-                <div class="foot_subtitle">
+                <div class="foot_subtitle post">
                     <h3>最近の投稿</h3>
                     <a href="">書くためのテーマ</a>
                     <p>2018年9月1日</p>
@@ -122,15 +123,24 @@
                     <p>2018年3月5日</p>
                 </div>
                 <div class="foot_subtitle">
-                    <h3>フッター右</h3>
+                    <h3>カテゴリー</h3>
                     <p><a href="">サンプル投稿</a></p>
                     <p><a href="">投稿フォーマット</a></p>
-                    <p><a href="">普通の投稿</a></p>
-                    <form action=""　class="search">
-                        <input type="text" value="検索…">
-                    </form>
+                    <p><a href="">普通の投稿</a>
+                        <form action=""　class="search">
+                            <input type="text" value="検索…" class="input_text">
+                        </form>
+                    </p>
                 </div>
             </div>
+        </div>
+        <div class="foot_bottom">
+            <div class="foot_mark">
+                <span><i class="fab fa-twitter"></i></span>
+                <span><i class="fab fa-facebook-f"></i></span>
+                <span><i class="fab fa-instagram"></i></span>
+            </div>
+            <p>Powered by <span>WordPress</span> | Theme: Write by Themegraphy</p>
         </div>
     </footer>
 </body>
