--- a/progate/progate.html
+++ b/progate/progate.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/sample.css">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>samplecoding</title>
 </head>
 <body>
@@ -19,43 +20,51 @@
     <div class="contain">
         <h2>LEARN TO CODE.<br />
             LEARN TO BE CREATIVE.</h2>
-        <p class="contain_p">progateはオンラインプログラミング学習サービスです。<br />
+        <p class="contain-p1">progateはオンラインプログラミング学習サービスです。<br />
             初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
         <a href="" class="btn new">新規登録はこちら</a>
-        <p>or</p>
-        <a href="" class="btn facebook">Facebookで登録</a>
-        <a href="" class="btn twitter">Twitterで登録</a>
+        <p class="contain-p2">or</p>
+        <a href="" class="btn facebook"><i class="fab fa-facebook-f"></i> Facebookで登録</a>
+        <a href="" class="btn twitter"><i class="fab fa-twitter"></i> Twitterで登録</a>
     </div>
     <main>
         <div class="marks_contain">
             <h3>Learn Where to Get Started!</h2>
             <div class="marks">
                 <div class="mark">
-                    <img src="img/html.png" alt="">
-                    <p class="mark_logo">HTML/CSS</p>
-                    <p>ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます</p>  
+                    <div class="mark_img">
+                        <img src="img/html.png" alt="">
+                        <p class="mark_logo">HTML/CSS</p>
+                    </div>
+                    <p class="mark_text">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます</p>  
                 </div>
                 <div class="mark">
-                    <img src="img/jQuery.png" alt="">
-                    <p class="mark_logo">jQuery</p>
-                    <p>素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+                    <div class="mark_img">
+                        <img src="img/jQuery.png" alt="">
+                        <p class="mark_logo">jQuery</p>
+                    </div>
+                    <p class="mark_text">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
                 </div>
                 <div class="mark">
-                    <img src="img/ruby.png" alt="">
-                    <p class="mark_logo">Ruby</p>
-                    <p>オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+                    <div class="mark_img">
+                        <img src="img/ruby.png" alt="">
+                        <p class="mark_logo">Ruby</p>
+                    </div>
+                    <p class="mark_text">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
                 </div>
                 <div class="mark">
-                    <img src="img/php.png" alt="">
-                    <p class="mark_logo">PHP</p>
-                    <p>HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+                    <div class="mark_img">
+                        <img src="img/php.png" alt="">
+                        <p class="mark_logo">PHP</p>
+                    </div>
+                    <p class="mark_text">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
                 </div>
             </div>
         </div>
     </main>
     <div class="sub_contain">
         <p>さぁ、あなたもProgateでプログラミングを学んでみませんか?</p>
-        <p>Let's learn to code, learn to be creative!</p>
+        <p class="sub_contain_text">Let's learn to code, learn to be creative!</p>
         <a href="" class="btn message">さっそく開発する</a>
     </div>
     <footer>
