--- a/progate/progate.html
+++ b/progate/progate.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/sample.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <title>samplecoding</title>
 </head>
@@ -12,20 +13,22 @@
             <img src="img/main_logo.png">
         </div>
         <div class="main_title">
-            <p>レッスン</p>
-            <p>新規登録</p>
-            <p>ログイン</p>
-        </div>
+            <p class="main_title_p">レッスン</p>
+            <p class="main_title_p">新規登録</p>
+            <p class="main_title_p">ログイン</p>
+            <p class="main_title_bar"><i class="fas fa-bars"></i></p>
+        </div>        
+        
     </header>
     <div class="contain">
         <h2>LEARN TO CODE.<br />
             LEARN TO BE CREATIVE.</h2>
         <p class="contain-p1">progateはオンラインプログラミング学習サービスです。<br />
             初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
-        <a href="" class="btn new">新規登録はこちら</a>
+        <p class="contain-p3 p3_new"><a href="" class="btn new">新規登録はこちら</a></p>
         <p class="contain-p2">or</p>
-        <a href="" class="btn facebook"><i class="fab fa-facebook-f"></i> Facebookで登録</a>
-        <a href="" class="btn twitter"><i class="fab fa-twitter"></i> Twitterで登録</a>
+        <p class="contain-p3 p3_facebook"><a href="" class="btn facebook"><i class="fab fa-facebook-f"></i> Facebookで登録</a></p>
+        <p class="contain-p3 p3_twitter"><a href="" class="btn twitter"><i class="fab fa-twitter"></i> Twitterで登録</a></p>
     </div>
     <main>
         <div class="marks_contain">
