header部分の修正

--- a/blog_site_Write/write.html
+++ b/blog_site_Write/write.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <header>
-        <h1>Write</h1>
         <div class="title">
-            <h3>書くためのテーマ</h3>
-            <div class="sub-title">
-                <p><a href="">ホーム</a></p>
-                <p><a href="">ページ</a></p>
-                <p><a href="">タイポグラフィー</a></p>
-                <p><a href="">お問合せ</a></p>
+            <h1>Write</h1>
+            <div class="mini_title">
+                <h3>書くためのテーマ</h3>
+                <div class="sub-title">
+                    <p><a href="">ホーム</a></p>
+                    <p><a href="">ページ</a></p>
+                    <p><a href="">タイポグラフィー</a></p>
+                    <p><a href="">お問合せ</a></p>
+                </div>
+                <p class="search_mark"><i class="fas fa-search"></i></p>
             </div>
-            <p><i class="fas fa-search"></i></p>
-        </div>
+        </div>    
     </header>
     <main>
         <div class="topic">
@@ -42,7 +44,7 @@
                         <p>2018年9月1日</p>
                     </div>
                     <div class="diary_text">
-                        <p>書くためのテーマ<br /><span>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</span></p>
+                        <p>画像付きの投稿<br /><span>吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。</span></p>
                     </div>
                 </div>
             </div>
@@ -52,7 +54,7 @@
                         <p>2018年9月1日</p>
                     </div>
                     <div class="diary_text">
-                        <p>書くためのテーマ<br /><span>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</span></p>
+                        <p>引用付きの投稿<br /><span>吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…</span></p>
                     </div>
                 </div>
             </div>
@@ -62,7 +64,7 @@
                         <p>2018年9月1日</p>
                     </div>
                     <div class="diary_text">
-                        <p>書くためのテーマ<br /><span>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</span></p>
+                        <p>コメント付きの投稿<br /><span>吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…</span></p>
                     </div>
                 </div>
             </div>
@@ -72,7 +74,7 @@
                         <p>2018年9月1日</p>
                     </div>
                     <div class="diary_text">
-                        <p>書くためのテーマ<br /><span>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</span></p>
+                        <p>吾輩は猫である<br /><span>吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…</span></p>
                     </div>
                 </div>
             </div>
@@ -82,7 +84,7 @@
                         <p>2018年9月1日</p>
                     </div>
                     <div class="diary_text">
-                        <p>書くためのテーマ<br /><span>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</span></p>
+                        <p>名前はまだ無い。どこで生れたかとんと見当がつかぬ。<br /><span>吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…</span></p>
                     </div>
                 </div>
             </div>
