progateサイトとwriteサイトの配置修正。
progateサイトはfacebookとtwitterボタンの通常時の配置を横並びに修正。
writeサイトはheaderの文字の配置修正と背景画像と日記の配置修正。

--- a/blog_site_Write/write.html
+++ b/blog_site_Write/write.html
@@ -13,10 +13,10 @@
             <div class="mini_title">
                 <h3>書くためのテーマ</h3>
                 <div class="sub-title">
-                    <p><a href="">ホーム</a></p>
-                    <p><a href="">ページ</a></p>
+                    <p><a href="">ホーム</a><i class="fas fa-angle-down"></i></p>
+                    <p><a href="">ページ</a><i class="fas fa-angle-down"></i></p>
                     <p><a href="">タイポグラフィー</a></p>
-                    <p><a href="">お問合せ</a></p>
+                    <p><a href="">お問い合わせ</a></p>
                 </div>
                 <p class="search_mark"><i class="fas fa-search"></i></p>
             </div>
