--- a/progate/progate.html
+++ b/progate/progate.html
@@ -13,9 +13,9 @@
             <img src="img/main_logo.png">
         </div>
         <div class="main_title">
-            <p class="main_title_p">レッスン</p>
-            <p class="main_title_p">新規登録</p>
-            <p class="main_title_p">ログイン</p>
+            <p class="main_title_p"><span class="main_title_span">レッスン</span></p>
+            <p class="main_title_p"><span class="main_title_span">新規登録</span></p>
+            <p class="main_title_p"><span class="main_title_span">ログイン</span></p>
             <p class="main_title_bar"><i class="fas fa-bars"></i></p>
         </div>        
         
@@ -27,8 +27,10 @@
             初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
         <p class="contain-p3 p3_new"><a href="" class="btn new">新規登録はこちら</a></p>
         <p class="contain-p2">or</p>
-        <p class="contain-p3 p3_facebook"><a href="" class="btn facebook"><i class="fab fa-facebook-f"></i> Facebookで登録</a></p>
-        <p class="contain-p3 p3_twitter"><a href="" class="btn twitter"><i class="fab fa-twitter"></i> Twitterで登録</a></p>
+        <div class="contain_flex">
+            <p class="contain-p3 p3_facebook"><a href="" class="btn facebook"><i class="fab fa-facebook-f"></i> Facebookで登録</a></p>
+            <p class="contain-p3 p3_twitter"><a href="" class="btn twitter"><i class="fab fa-twitter"></i> Twitterで登録</a></p>
+        </div>
     </div>
     <main>
         <div class="marks_contain">
