hoverによって表示される文章を二段表示
ul/liタグを使って、hoverによって表示される文章を二段表示にした。
その都度、レイアウト修正。

--- a/blog_site_Write/write.html
+++ b/blog_site_Write/write.html
@@ -14,13 +14,24 @@
             <div class="mini_title">
                 <h3>書くためのテーマ</h3>
                 <div class="sub-title">
-                    <p><a class="sub-title1" href="">ホーム</a><i class="fas fa-angle-down"></i></p>
+                    <div class="sub-title1 sub-title_p">
+                        <a href="">ホーム</a><i class="fas fa-angle-down"></i>
+                        <div class="sub-title1-1">
+                            <p class="sub-title1-1_home"><a class="sub-title1-1_a" href="">→カスタマイズ</a></p>
+                        </div>
+                    </div>
+                    <div class="sub-title1 sub-title_p">
+                        <a href="">ページ</a><i class="fas fa-angle-down"></i>
+                        <ul class="sub-title1-1">
+                            <li><a class="sub-title1-1_b" href="">アイキャッチ画像無しのページ</a></li>
+                            <li><a class="sub-title1-1_b" href="">アイキャッチ画像無しのページ</a></li>
+                        </ul>
+                    </div>
+                    <p class="sub-title_p"><a href="">タイポグラフィー</a></p>
+                    <p class="sub-title_p"><a href="">お問い合わせ</a></p>
                     
-                    <p><a class="sub-title_mark" href="">ページ</a><i class="fas fa-angle-down"></i></p>
-                    <p><a class="sub-title_mark" href="">タイポグラフィー</a></p>
-                    <p><a class="sub-title_mark" href="">お問い合わせ</a></p>
                 </div>
-                <p class="sub-title1-1">→カスタマイズ</p>
+                
                 <p class="search_mark"><i class="fas fa-search"></i></p>
             </div>
         </div>    
