細かい配置の修正

--- a/blog_site_Write/write.html
+++ b/blog_site_Write/write.html
@@ -28,7 +28,7 @@
                         </ul>
                     </div>
                     <p class="sub-title_p"><a href="">タイポグラフィー</a></p>
-                    <p class="sub-title_p"><a href="">お問い合わせ</a></p>
+                    <p class="sub-title_p sub-title-ask"><a href="">お問い合わせ</a></p>
                     
                 </div>
                 
