--- a/blog_site_Write/write.html
+++ b/blog_site_Write/write.html
@@ -121,11 +121,13 @@
             <div class="foot_container_sub">
                 <div class="foot_main">
                     <img src="img/profile-m.png" class="foot_img">
-                    <p>John_Doe</p>  
-                    <div class="foot_mark">
-                        <span><i class="fab fa-twitter"></i></span>
-                        <span><i class="fab fa-facebook-f"></i></span>
-                        <span><i class="fab fa-instagram"></i></span>
+                    <div class="foot_main1">
+                        <p>John Doe</p>  
+                        <div class="foot_mark">
+                            <span><i class="fab fa-twitter"></i></span>
+                            <span><i class="fab fa-facebook-f"></i></span>
+                            <span><i class="fab fa-instagram"></i></span>
+                        </div>
                     </div>
                 </div>
                 <p class="person_introduce">これはプロフィールウィジェットです。ここにはプロフィール画像・名前・自己紹介文・ソーシャルリンク（最大7つ）を設定することができます。</p>
@@ -158,11 +160,11 @@
         </div>
         <div class="foot_bottom">
             <div class="foot_mark">
-                <span><i class="fab fa-twitter"></i></span>
+                <p><span><i class="fab fa-twitter"></i></span>
                 <span><i class="fab fa-facebook-f"></i></span>
-                <span><i class="fab fa-instagram"></i></span>
+                <span class="foot_mark_span"><i class="fab fa-instagram"></i></span>
+                Powered by <span>WordPress</span> | Theme: Write by Themegraphy</p>
             </div>
-            <p>Powered by <span>WordPress</span> | Theme: Write by Themegraphy</p>
         </div>
     </footer>
 
