--- a/fashion-template/fashion-template.html
+++ b/fashion-template/fashion-template.html
@@ -10,15 +10,19 @@
 <body>
     <header>
         <div class="header_topic">
-            <ul>
-                <li>NEW IN</li>
-                <li>COLLECTION</li>
-                <li>LOOKBOOK</li>
-                <li id="LAMINA">LAMINA</li>
-                <li>OUR STORY</li>
-                <li>NEWS</li>
-                <li>STORES</li>
-            </ul>
+            <!-- <ul> -->
+                <div class="header_topic1">
+                    <p>NEW IN</p>
+                    <p>COLLECTION</p>
+                    <p>LOOKBOOK</p>
+                </div>
+                <p id="LAMINA">LAMINA</p>
+                <div class="header_topic2">
+                    <p>OUR STORY</p>
+                    <p>NEWS</p>
+                    <p>STORES</p>
+                </div>
+            <!-- </ul> -->
         </div>
     </header>
     <main>
