メイン画像の設定
background-imageで設定。

--- a/fashion-template/fashion-template.html
+++ b/fashion-template/fashion-template.html
@@ -12,21 +12,23 @@
         <div class="header_topic">
             <!-- <ul> -->
                 <div class="header_topic1">
-                    <p>NEW IN</p>
-                    <p>COLLECTION</p>
-                    <p>LOOKBOOK</p>
+                    <p id="new_in">NEW IN</p>
+                    <p id="collection">COLLECTION</p>
+                    <p id="lookbook">LOOKBOOK</p>
                 </div>
                 <p id="LAMINA">LAMINA</p>
                 <div class="header_topic2">
-                    <p>OUR STORY</p>
-                    <p>NEWS</p>
-                    <p>STORES</p>
+                    <p id="our_story">OUR STORY</p>
+                    <p id="news">NEWS</p>
+                    <p id="stores">STORES</p>
                 </div>
             <!-- </ul> -->
         </div>
     </header>
     <main>
-
+        <div class="main_img">
+            <!-- <p>back</p> -->
+        </div>
     </main>
     <footer>
 
