Primitiveのロゴを設置

--- a/fashion-template/fashion-template.html
+++ b/fashion-template/fashion-template.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div class="main_img">
-            <!-- <p>back</p> -->
+            <img src="fashion-template-assets/Primitive.png" alt="Primitive">            
         </div>
     </main>
     <footer>
