--- a/fashion-template/fashion-template.html
+++ b/fashion-template/fashion-template.html
@@ -10,28 +10,50 @@
 <body>
     <header>
         <div class="header_topic">
-            <!-- <ul> -->
-                <div class="header_topic1">
-                    <p id="new_in">NEW IN</p>
-                    <p id="collection">COLLECTION</p>
-                    <p id="lookbook">LOOKBOOK</p>
-                </div>
-                <p id="LAMINA">LAMINA</p>
-                <div class="header_topic2">
-                    <p id="our_story">OUR STORY</p>
-                    <p id="news">NEWS</p>
-                    <p id="stores">STORES</p>
-                </div>
-            <!-- </ul> -->
+            <div class="header_topic1">
+                <p id="new_in">NEW IN</p>
+                <p id="collection">COLLECTION</p>
+                <p id="lookbook">LOOKBOOK</p>
+            </div>
+            <p id="LAMINA">LAMINA</p>
+            <div class="header_topic2">
+                <p id="our_story">OUR STORY</p>
+                <p id="news">NEWS</p>
+                <p id="stores">STORES</p>
+            </div>
         </div>
     </header>
     <main>
-        <div class="main_img">
-            <img src="fashion-template-assets/Primitive.png" alt="Primitive">            
+        <div class="main_container">
+            <img class="main_img" src="fashion-template-assets/Primitive.png" alt="Primitive"> 
+            <div class="main_text">
+                <p class="main_text1">太古の誇りを</p>
+                <p class="main_text2">Discover the Collection</p>
+            </div>
+            <div class="mark">
+                <div class="before">
+                    <img src="fashion-template-assets/img3.jpg" alt="">
+                </div>
+                <div class="next">
+                    <img src="fashion-template-assets/img3.jpg" alt="">
+                </div>                
+            </div>
+        </div>
+        <div class="dots">
+            <img src="fashion-template-assets/dot1.jpg" alt="">
+            <img src="fashion-template-assets/dot2.jpg" alt="">
+            <img src="fashion-template-assets/dot2.jpg" alt="">
         </div>
     </main>
     <footer>
-
+        <div class="footer_images">
+            <img class="footer_image1" src="fashion-template-assets/img4.jpg" alt="">
+            <img class="footer_image2" src="fashion-template-assets/img5.jpg" alt="">
+        </div>
+        <div class="footer_images2">
+            <img src="fashion-template-assets/template.jpg" alt="">
+            <p>Discover</p>
+        </div>
     </footer>
 </body>
 </html>
