サイドバーの修正

--- a/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
+++ b/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
@@ -30,74 +30,100 @@
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
+                    </div>
+                    <div>
+                        <p class="blog_text2">2月27,2018</p>
+                    </div>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_377522251-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
                 <div class="blog">
                     <p class="JIN_design">JINのデザイン</p>
                     <img src="img/shutterstock_279275555-640x360.jpg" alt="">
-                    <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
-                    <p>2月27,2018</p>
+                    <div class="blog_texts">
+                        <p class="blog_text">この記事を書いた人｜ライタープロフィールを作成できる</p>
+                    </div>
+                    <p class="blog_text2">2月27,2018</p>
                 </div>
             </div>
             <div class="side_container">
@@ -107,6 +133,90 @@
                     <p>「アフィリエイト」と「SEO」に必要な機能を全て詰め込んだテーマが完成。売れるサイト作りを確実に後押しします。</p>
                     <div class="block1_btn">
                         <a href="">今すぐダウンロード</a>
+                    </div>
+                </div>
+                <div class="block2">
+                    <img src="img/shutterstock_451391740-150x150.jpg" alt="">
+                    <p>JIN</p>
+                    <p>WordPress Template</p>
+                    <p>読む人も、書く人も、すべてを考え抜いたデザインを実現。真の使いやすさを追求したWordPressテーマです。 「アフィリエイト」と「SEO」に必要なものは、すべて詰め込みました。売れるサイト作りを確実に後押しします。</p>
+                    <div class="block2_btn">
+                        <a href="">詳しくみる</a>
+                    </div>
+                    <div class="block2_btn2">
+                        <p>＼ Follow me ／</p>
+                        <div>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-facebook-f"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="block3">
+                    <div class="block3_container">
+                        <p>RECENT POST</p>
+                        <div class="block3_post">
+                            <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                            <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
+                        </div>
+                        <div class="block3_post">
+                            <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                            <p>この記事を書いた人｜ライタープロフィールを作成できる</p>
+                        </div>
+                        <div class="block3_post">
+                            <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                            <p>ああああああああああああああああああああああああああああああ</p>
+                        </div>
+                        <div class="block3_post">
+                            <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                            <p>ああああああああああああああああああああああああああああ</p>
+                        </div>
+                        <div class="block3_post">
+                            <img src="img/shutterstock_377522251-320x180.jpg" alt="">
+                            <p>あああああああああああああああああああああああああああああああ</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="block4">
+                    <div class="block4_container">
+                        <p>CATEGORY</p>
+                        <select name="カテゴリー" id="">カテゴリー
+                            <option value="カテゴリーを選択">カテゴリー</option>
+                            <option value="JINのエディタ">JINのエディタ</option>
+                            <option value="JINのエディタ">JINのエディタ</option>
+                            <option value="JINのエディタ">JINのエディタ</option>
+                            <option value="JINのエディタ">JINのエディタ</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="block5">
+                    <div class="block5_container">
+                        <div class="tag">
+                            <p>TAG</p>
+                        </div>
+                        <div class="tag_title">
+                            <p>SEO</p>
+                            <p>Wordpress</p>
+                            <p>おすすめ機能</p>
+                            <p>エディタ</p>
+                            <p>スマホ</p>
+                            <p>ツール</p>
+                            <p>デザイン</p>
+                            <p>ユーザビリティ</p>
+                            <p>収益化</p>
+                            <p>広告</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="block6">
+                    <div class="block6_container">
+                        <div class="search">
+                            <p>SEARCH</p>
+                        </div>
+                        <button type="submit" class="submit">
+                            <i class="fas fa-search"></i> 検索
+                        </button>
                     </div>
                 </div>
             </div>
