サイドバー修正

--- a/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
+++ b/jin-demo.jpdemo-4/jin-demo.jpdemo-4.html
@@ -125,37 +125,49 @@
                     </div>
                     <p class="blog_text2">2月27,2018</p>
                 </div>
+                <div class="page">
+                    <div class="page_number1">
+                        <p>1</p>
+                    </div>
+                    <div class="page_number2">
+                        <p>2</p>
+                    </div>
+                </div>
             </div>
             <div class="side_container">
                 <div class="block1">
                     <p class="block1_title">WordPressテーマ「JIN」</p>
-                    <img src="img/demo_banner.png" alt="">
-                    <p>「アフィリエイト」と「SEO」に必要な機能を全て詰め込んだテーマが完成。売れるサイト作りを確実に後押しします。</p>
-                    <div class="block1_btn">
-                        <a href="">今すぐダウンロード</a>
+                    <div class="block1_container">
+                        <div class="block1_img_wrap">
+                            <img src="img/demo_banner.png" alt="">
+                        </div>
+                        <p class="block1_text">「アフィリエイト」と「SEO」に必要な機能を全て詰め込んだテーマが完成。売れるサイト作りを確実に後押しします。</p>
+                        <div class="block1_btn">
+                            <a href="">今すぐダウンロード</a>
+                        </div>
                     </div>
                 </div>
                 <div class="block2">
                     <img src="img/shutterstock_451391740-150x150.jpg" alt="">
-                    <p>JIN</p>
-                    <p>WordPress Template</p>
-                    <p>読む人も、書く人も、すべてを考え抜いたデザインを実現。真の使いやすさを追求したWordPressテーマです。 「アフィリエイト」と「SEO」に必要なものは、すべて詰め込みました。売れるサイト作りを確実に後押しします。</p>
+                    <p class="block2_p1">JIN</p>
+                    <p class="block2_p2">WordPress Template</p>
+                    <p class="block2_p3">読む人も、書く人も、すべてを考え抜いたデザインを実現。真の使いやすさを追求したWordPressテーマです。 「アフィリエイト」と「SEO」に必要なものは、すべて詰め込みました。売れるサイト作りを確実に後押しします。</p>
                     <div class="block2_btn">
                         <a href="">詳しくみる</a>
                     </div>
                     <div class="block2_btn2">
                         <p>＼ Follow me ／</p>
-                        <div>
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-facebook-f"></i>
-                            <i class="fab fa-facebook-f"></i>
+                        <div class="marks">
+                            <p class=""><a href="" class=""><i class="fab fa-twitter"></i></a></p>
+                            <p class=""><a href="" class=""><i class="fab fa-facebook-f"></i></a></p>
+                            <p class=""><a href="" class=""><i class="fab fa-facebook-f"></i></a></p>
+                            <p class=""><a href="" class=""><i class="fab fa-facebook-f"></i></a></p>
                         </div>
                     </div>
                 </div>
                 <div class="block3">
                     <div class="block3_container">
-                        <p>RECENT POST</p>
+                        <p class="block3_container_p">RECENT POST</p>
                         <div class="block3_post">
                             <img src="img/shutterstock_377522251-320x180.jpg" alt="">
                             <p>JINはデザインインポートに対応！自分好みのデザインに「着せ替え」できる</p>
@@ -215,8 +227,21 @@
                             <p>SEARCH</p>
                         </div>
                         <button type="submit" class="submit">
-                            <i class="fas fa-search"></i> 検索
+                            <i class="fas fa-search search_mark"></i> 
                         </button>
+                    </div>
+                </div>
+                <div class="block7">
+                    <div class="block7_container">
+                        <div class="recommend">
+                            <p>RECOMMEND</p>
+                        </div>
+                        <div class="block7_topic">
+                            <div class="block7_img">
+                                <img src="img/shutterstock_204195961-320x180.jpg" alt="">
+                            </div>
+                            <p>「JIN（ジン）」の特徴｜アフィリエイトのノウハウが凝縮されたWordPressテーマ</p>
+                        </div>
                     </div>
                 </div>
             </div>
